updated my website

--- a/index.html
+++ b/index.html
@@ -1,8 +1,86 @@
 <!DOCTYPE html>
 <html>
-   <head>
-   </head>
-   <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+<head>
+  <title>Knitting Crafts</title>
+  <link rel="stylesheet" href="styles.css">
+
+  <style>
+   body {
+     font-family: Arial, sans-serif;
+     margin: 0;
+     padding: 20px;
+   }
+   header {
+     text-align: center;
+     margin-bottom: 20px;
+   }
+   img {
+     max-width: 100%;
+     height: auto;
+   }
+   footer {
+     text-align: center;
+     color: #362175;
+     font-size: 24px;
+     margin-top: 50px;
+   }
+
+</style>/h2>
+      <p>Knitting is a w
+</head>
+<body>
+  <header>
+    <h1 class="uppercase" id="mainHeading">Knitting Crafts</h1>
+  </header>
+
+  <main>
+    <article>
+      <h2>Introduction<onderful craft that allows you to create beautiful and cozy items using yarn and knitting needles. It's a versatile and creative hobby enjoyed by many people around the world.</p>
+      <img src="file:///C:/Users/sumit/html-me-something/.git/images/knitting-stitches-1.webp" alt="knitting-stitches-1" style="width:128px;height:128px;">
+      </article>
+
+    <article>
+      <h2>Types of Knitting Stitches</h2>
+      <p>There are numerous knitting stitches that you can learn and experiment with. Some popular ones include:</p>
+      <ul>
+        <li>Garter Stitch</li>
+        <li>Stockinette Stitch</li>
+        <li>Rib Stitch</li>
+        <li>Cable Stitch</li>
+        <li>Seed Stitch</li>
+      </ul>
+      <img src="images/stitches.jpg" alt="Knitting Stitches" />
+      </article>
+
+    <article>
+      <h2>Knitting Patterns</h2>
+      <p id="testP" class="funParagraph">Knitting patterns provide step-by-step instructions for creating various items. Whether you want to make a scarf, a hat, or a sweater, there's a pattern for every project.</p>
+      <img src="images/knitting.webp" alt="Knitting Pattern" />
+   </article>
+   
+    <article>
+      <h2>Pattern: Garter Stitch Scarf</h2>
+      <p>Materials:</p>
+      <ul>
+        <li>Yarn: Any worsted weight yarn</li>
+        <li>Needles: US size 8 (5 mm) knitting needles</li>
+      </ul>
+
+      <h3>Instructions:</h3>
+      <ol>
+        <li>Cast on 30 stitches.</li>
+        <li>Knit every row (all stitches) until the scarf reaches your desired length.</li>
+        <li>Bind off all stitches.</li>
+        <li>Weave in any loose ends.</li>
+      </ol>
+
+      <img src="images/scarf.webp" alt="Finished Scarf" />
+      
+    </article>
+  </main>
+
+  <footer>
+    <p>&copy; 2023 Knitting Crafts. All rights reserved.</p>
+  </footer>
+</body>
 </html>
